<resources>
    <string name="app_name">Bunny Coach</string>
    <string name="action_settings">Settings</string>


    <!-- LoginActivity Activity -->
    <string name="register_btn">Don\'t have an account?</string>
    <string name="login_btn">Login</string>
    <string name="email_example_txt">Email</string>
    <string name="password">Password</string>
    <string name="forgot_passwd">Forgot password?</string>


    <!-- Toast Warnings-->
    <string name="info_update_about_successful">Data successfully updated!</string>
    <string name="info_registration_successful">Registration successful!</string>
    <string name="info_internal_error">Internal error!</string>
    <string name="info_operation_failed">Operation failed!</string>
    <string name="info_data_outdated">Data outdated!</string>


    <!-- Home Activity -->
    <string name="home_exercise_day">Exercises of the day</string>
    <string name="check_exercises_button">Check</string>
    <string name="home_title">Today\'s Exercises</string>

    <!-- About Activity -->
    <string name="about_you">About you</string>
    <string name="weight">Weight in kilograms</string>
    <string name="height">Height in meters</string>
    <string name="hours">Hours per day to work</string>
    <string name="finish">Finish</string>
    <string name="days_to_do_exercices">Days to do exercices</string>

    <!-- Register Activity -->
    <string name="register_now_btn">Register now</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="name">Name</string>
    <string name="birthday">Date of birth</string>


    <!-- Training Activity -->
    <string name="training_done_button">Done</string>
    <string name="exercise_title">Exercise Test</string>
    <string name="exercise_done_snack">Exercise set as done!</string>
    <string name="exercise_done_snack_undo">Undo</string>
    <string name="training_title">Training</string>

    <!-- Profile chooser -->
    <string name="profile_chooser_balanced_title">The Balanced</string>
    <string name="profile_chooser_balanced_text">Who wants to take care of your health, doing regular exercises</string>
    <string name="profile_chooser_bodybuilder_title">The Bodybuilder</string>
    <string name="profile_chooser_bodybuilder_text">Who dreams with the perfect body, doing hardcore exercises</string>
    <string name="profile_chooser_lazy_title">The Lazy</string>
    <string name="profile_chooser_lazy_text">Who aims at losing weight, increasing the difficulty through time</string>
    <string name="profile_chooser_fragment_choose_your_profile">Choose the profile you seek</string>
    <string name="profile_chooser_title">Profile Chooser</string>

    <string name="choose_profile_button">CHOOSE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  Statistics Activity -->
    <string name="statistics_title_days_worked_last_week">Days worked last week</string>
    <string name="statistics_title">Statistics</string>

    <!--
    - Initials of each day of the week to be used in the statistics fragment and
    - in the user registration form
    -->
    <string name="initial_day_of_the_week_monday">M</string>
    <string name="initial_day_of_the_week_tuesday">T</string>
    <string name="initial_day_of_the_week_wednesday">W</string>
    <string name="initial_day_of_the_week_thursday">T</string>
    <string name="initial_day_of_the_week_friday">F</string>
    <string name="initial_day_of_the_week_saturday">S</string>
    <string name="initial_day_of_the_week_sunday">S</string>
    <string name="logout">Logout</string>
    <string name="no_exercise_today">There is no exercise for today!</string>
    <string name="refresh_statistics">Refresh statistics</string>


</resources>
