<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.LoginActivity"
    android:background="@drawable/ic_bg_pink_pallet_triangularized">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="64dp"
        android:paddingRight="64dp">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/register_name_etxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingTop="16dp"
            android:textColor="@color/textColor"
            app:backgroundTint="@color/textColor" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/register_email_etxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_example_txt"
            android:inputType="textEmailAddress"
            android:paddingTop="16dp"
            android:textColor="@color/textColor"
            app:backgroundTint="@color/textColor" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/register_passwd_etxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingTop="16dp"
            android:textColor="@color/textColor"
            app:backgroundTint="@color/textColor" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/register_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/birthday"
            android:imeOptions="actionDone"
            android:paddingTop="16dp"
            android:textColor="@color/textColor"
            android:clickable="true"
            android:editable="false"
            app:backgroundTint="@color/textColor" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/register_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/margin_big"
                    android:background="@drawable/button_border"
                    android:text="@string/register_now_btn"
                    android:textColor="@color/textColor" />

            </RelativeLayout>

            <Button
                style="@style/AppButtom.White"
                android:textAllCaps="false"
                android:id="@+id/register_back_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:layout_gravity="center"
                android:paddingTop="20dp"
                android:text="@string/already_have_account"
                android:textColor="@color/textColor" />



        </LinearLayout>

    </LinearLayout>

</LinearLayout>