<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.LoginActivity"
    android:background="@drawable/drawable_gradient_background_about_activity"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="64dp"
        android:paddingRight="64dp">

        <TextView
            android:id="@+id/fragment_about_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_you"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:paddingBottom="40dp"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/about_weight_etxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/weight"
            android:textColorHint="@color/white"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingTop="16dp"
            android:textColor="@color/textColor"
            app:backgroundTint="@color/textColor" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/about_height_etxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/height"
            android:textColorHint="@color/white"
            android:inputType="text"
            android:paddingTop="16dp"
            android:textColor="@color/textColor"
            app:backgroundTint="@color/textColor" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/about_hours_etxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hours"
            android:textColorHint="@color/white"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingTop="16dp"
            android:textColor="@color/textColor"
            app:backgroundTint="@color/textColor" />

        <android.support.constraint.ConstraintLayout
            android:paddingTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/fragment_about_title_days_worked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_big"
                android:layout_marginEnd="8dp"
                android:text="@string/days_to_do_exercices"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/days_of_the_week_checkbox_monday"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <include
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                layout="@layout/days_of_the_week" />

        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/about_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/margin_big"
                    android:background="@drawable/button_border"
                    android:text="@string/finish"
                    android:textColor="@color/textColor" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>